remove dependency on java preview features